test/expected/multiline_echo_expansion.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "word*"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "word*"
]
shit: 3:1: error: the glob pattern 'word*' matched no file, it expands to its literal text, which is rarely intended. Probe for matches with compgen -G 'word*' or relax with set +o failglob.
     3 |  word*
       |  ^~~~~ here.
